2004-06-19  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/new_book_dialog.glade,
	  lib/alexandria/ui/new_book_dialog.rb,
	  lib/alexandria/book.rb:

	- Improved the add new book dialog to allow searches by authors and
	  keyword ;
	- Validate ISBNs before sending them to providers ;
	- Perform an ISBN search when enter is detected in the ISBN entry ;
	- Fixed a bug in the Amazon provider, when some books that are not
	  released yet don't have a 'manufacturer' attribute.

2004-06-19  Dafydd Harries  <daf@muse.19inch.net>

	* lib/alexandria/book.rb:

	Rewrote the ISBN code to be more Rubyish and made it allow 13-digit
	EAN numbers.

2004-06-18  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/new_book_dialog.rb:

	Fixed a bug when Alexandria crashed in the add new book dialog when the 
	clipboard was empty.

2004-06-16  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/new_book_dialog.glade,
	  lib/alexandria/ui/new_book_dialog.rb:

	Autofill the ISBN entry with the clipboard contents upon focus.

	* lib/alexandria/book.rb:

	Added code to validate ISBNs.

	* README:

	- Updated the list of features ;
	- Added "gconftool-2 --shutdown" to the install steps.

2004-06-15  Laurent Sansonetti  <lrz@gnome.org>

	* AUTHORS,
	  lib/alexandria.rb:

	Added Pascal, added language prefixes after each translator.

	* data/alexandria/glade/new_book_dialog.glade,
	  lib/alexandria/ui/new_book_dialog.rb:

	- The dialog is now automatically resized according to the selected criterion ;
	- Performs the search when 'enter' is pressed in the title entry ;
	- Performs the add when a double left click is detected on a result row ;
	- Fixed some small UI issues.

	* lib/alexandria/ui/main_app.rb:
		
	Sorts the current library after a book has been added.

2004-06-14  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book.rb,
	  data/alexandria/glade/new_book_dialog.glade,
	  lib/alexandria/ui/new_book_dialog.rb:
